# Jarvis-Virat-AIOS

./: AGENTS.md
backend/: .gitignore  AGENTS.md  pyproject.toml  sample.txt  test_tools.py
backend/app/: chatbot.py  graph.py  main.py  requirements.txt  routes.py
backend/app/Agents/: __init__.py  agent.py  coding.py  planning.py  registry.py  research.py  router.py
backend/app/Auth/: database.py  dependencies.py  models.py  routes.py  security.py  service.py
backend/app/Config/: settings.py
backend/app/FastAPI/: dependencies.py  rate_limiter.py  request_models.py  routes.py  schemas.py
backend/app/Jarvis/: runtime.py
backend/app/LLM/: client.py
backend/app/LangGraph/: graph.py  service.py  state.py
backend/app/LangGraph/guardrails/: __init__.py  limits.py  validator.py
backend/app/LangGraph/nodes/: agent.py  chatbot.py  executor.py  planner.py  router.py  tool_node.py
backend/app/LangGraph/recovery/: __init__.py  policy.py  recovery.py
backend/app/LangGraph/validation/: __init__.py  rules.py  validator.py
backend/app/MCP/: __init__.py  client.py  models.py  registry.py
backend/app/MCP/servers/: __init__.py  (+3 more)
backend/app/Memory/: __init__.py  conversation.py  manager.py  storage.py
backend/app/Models/: __init__.py  action.py  agent_config.py  execution_state.py  plan.py
backend/app/Observability/: __init__.py  manager.py  models.py  trace.py
backend/app/Prompts/: agent.py
backend/app/Services/: chat_service.py
backend/app/Tools/: calculator.py  datetime_tool.py  engine.py  file_reader.py  python_runner.py  registry.py  tool.py
(+32 files in other folders)
