[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0.1",
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pyjwt>=2.8.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.10",
    "uvicorn>=0.51.0",
]
